--- a/emlite-api/pom.xml
+++ b/emlite-api/pom.xml
@@ -2,10 +2,20 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+
+    <parent>
+        <groupId>com.cepro.emlite</groupId>
+        <artifactId>mediator-parent</artifactId>
+        <version>0.1.0</version>
+        <relativePath>..</relativePath>
+    </parent>
+
     <groupId>com.cepro.emlite</groupId>
     <artifactId>emlite-api</artifactId>
     <version>0.1.0</version>
     <name>Cepro Emlite API</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
