--- a/mediator/pom.xml
+++ b/mediator/pom.xml
@@ -2,10 +2,19 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>com.cepro.emlite</groupId>
+        <artifactId>mediator-parent</artifactId>
+        <version>0.1.0</version>
+        <relativePath>..</relativePath>
+    </parent>
+
     <groupId>com.cepro.emlite</groupId>
     <artifactId>emlite-mediator</artifactId>
     <version>0.1.0</version>
     <name>Cepro Emlite Mediator</name>
+
     <properties>
         <!-- set encoding to suppress failsafe file encodings warning -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -110,12 +119,6 @@
         </dependency>
     </dependencies>
     <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
         <extensions>
             <extension>
                 <groupId>kr.motd.maven</groupId>
