--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,9 +16,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    
+    permissions:
+        packages: read
+    
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
@@ -27,9 +29,10 @@ jobs:
         java-version: '17'
         distribution: 'liberica'
         cache: maven
+        server-username: ${secrets.PACKAGES_READ_USER}
+        server-password: ${secrets.PACKAGES_READ_TOKEN}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
