add skeleton sync_to_db.py script add emlite_object_id_enum.py as a more meaningful way to get the object id enum in clients

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ grpcio==1.56.2
 grpcio-tools==1.56.2
 
 git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git@serialization
+
+supabase==1.0.4
