docker: prefix with repo

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,4 +45,4 @@ jobs:
           context: .
           file: docker/Dockerfile.mediator_server
           push: true
-          tags: ${{ steps.extract_tag.outputs.tag }}-mediator-server
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.extract_tag.outputs.tag }}-mediator-server
