--- a/docker/docker-compose.mediator.yml
+++ b/docker/docker-compose.mediator.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   WLCE.Plot-01.C:
-    image: mediator-beta
+    image: mediator_beta
     environment:
       EMLITE_HOST: 100.79.244.150
       EMLITE_PORT: 8080
@@ -10,7 +10,7 @@ services:
       - 11001:50051
 
   WLCE.Plot-02.C: 
-    image: mediator-beta
+    image: mediator_beta
     environment:
       EMLITE_HOST: 100.79.244.152
       EMLITE_PORT: 8080
