default meter ports to 8080 rather than requiring them to be set - at this stage all use 8080

--- a/docker/Dockerfile.meter_health_check
+++ b/docker/Dockerfile.meter_health_check
@@ -19,4 +19,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Invoke the script
-CMD ["python", "-m", "emlite.sync.sync_to_db"]
+CMD ["python", "-m", "emlite_mediator.jobs.meter_health_check"]
