--- a/docker/Dockerfile.mediator_server
+++ b/docker/Dockerfile.mediator_server
@@ -22,4 +22,4 @@ COPY . .
 EXPOSE 50051
 
 # Start the server
-CMD ["python", "-m", "emlite.grpc.emlite-server"]
+CMD ["python", "-m", "emlite_mediator.mediator.grpc.server"]
