--- a/timers/mediator-prepay-sync.service
+++ b/timers/mediator-prepay-sync.service
@@ -2,6 +2,7 @@
 Description=Mediator sync prepay values
 
 [Service]
+Type=oneshot
 ExecStart=/home/admin/mediator/bin/run_meter_prepay_syncs
 
 [Install]
