--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,7 @@
 # official Python image
-FROM python:3.11-slim-bookworm
+FROM python:3.11-alpine
 
-RUN apt-get update && \
-    apt-get install -y git && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache git 
 
 WORKDIR /mediator
 
