--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ docker
 grpcio==1.56.2
 grpcio-tools==1.56.2
 git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git@serialization
+structlog
 supabase==1.0.4
