add --freq hourly to meter sync service

--- a/infra/systemd/meter-sync-hourly.service
+++ b/infra/systemd/meter-sync-hourly.service
@@ -3,7 +3,7 @@ Description=Sync all meter_metrics with run_frequency 'hourly'
 
 [Service]
 Type=oneshot
-ExecStart=/home/admin/mediator/bin/run_meter_syncs
+ExecStart=/home/admin/mediator/bin/run_meter_syncs --freq hourly
 
 [Install]
 WantedBy=multi-user.target
