--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ grpcio-tools==1.56.2
 git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git@serialization
 structlog
 supabase==1.0.4
+tenacity==8.2.3
