add an optional extra supabase connection to sync to additional database - this will be used when cutting over apptest1 to prod

--- a/mediator.env.example
+++ b/mediator.env.example
@@ -1,4 +1,4 @@
-MEDIATOR_IMAGE=ghcr.io/cepro/emlite-mediator:0.4.0
+MEDIATOR_IMAGE=ghcr.io/cepro/emlite-mediator:0.5.3
 
 SITE=wlce
 
@@ -11,3 +11,10 @@ FLOWS_ROLE_KEY=
 #SUPABASE_URL=https://rkzgrxssutcwrauaazjz.supabase.co
 SUPABASE_URL=http://0.0.0.0:54321
 
+# Temporary hack to sync 2 an extra supabase for prod cutover.
+# wanted to do this in the database but proved difficult ... 
+# NOTE: this is only used to update meter_shadows with new sync values - see SyncerBase _update_shadow()
+
+# SUPABASE_URL_EXTRA=
+# SUPABASE_KEY_EXTRA=
+# FLOWS_ROLE_KEY_EXTRA=
