--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
         run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
       - name: Build and push server Docker image
-        uses: docker/build-push-action@f2a1d5v5.1.0
+        uses: docker/build-push-action@v5.1.0
         with:
           context: .
           file: docker/Dockerfile
