new configuration: - emlite socket timeout - max jobs in parallel
should help throttle the jobs and reduce timeout errors (mainly for HMCE which has more mediators)

--- a/mediator.env.example
+++ b/mediator.env.example
@@ -11,10 +11,8 @@ FLOWS_ROLE_KEY=
 #SUPABASE_URL=https://rkzgrxssutcwrauaazjz.supabase.co
 SUPABASE_URL=http://0.0.0.0:54321
 
-# Temporary hack to sync 2 an extra supabase for prod cutover.
-# wanted to do this in the database but proved difficult ... 
-# NOTE: this is only used to update meter_shadows with new sync values - see SyncerBase _update_shadow()
+# Open socket timeout when connecting to meters 
+EMLITE_TIMEOUT_SECONDS=20
 
-# SUPABASE_URL_EXTRA=
-# SUPABASE_KEY_EXTRA=
-# FLOWS_ROLE_KEY_EXTRA=
+# Max number of jobs (syncers) to run in parallel.
+MAX_PARALLEL_JOBS=15
