--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ docker
 grpcio==1.56.2
 grpcio-tools==1.56.2
 git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git@serialization
+ruff==0.3.7
 structlog
 supabase==2.3.5
 tenacity==8.2.3
