--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -28,6 +28,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint
+      run: |
+        ruff check
     - name: Test
       run: |
         python -m unittest discover
