--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 annotated-types==0.5.0
 anyio==3.7.1
-autopep8 @ file:///opt/conda/conda-bld/autopep8_1650463822033/work
+autopep8
 certifi==2023.7.22
 charset-normalizer==3.2.0
 crcmod==1.7
@@ -15,7 +15,7 @@ httpcore==0.17.3
 httpx==0.24.1
 idna==3.4
 Jinja2==3.1.2
-kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git@704995acdb2f114e15809cf5f469e3a80a2dddad
+kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git@serialization
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
@@ -23,7 +23,6 @@ memray==1.9.1
 packaging==23.1
 postgrest==0.10.8
 protobuf==4.23.4
-pycodestyle @ file:///work/ci_py311/pycodestyle_1677708783451/work
 pydantic==2.1.1
 pydantic_core==2.4.0
 Pygments==2.16.1
@@ -42,7 +41,6 @@ supabase==2.3.5
 supafunc==0.3.3
 tenacity==8.2.3
 termcolor==2.4.0
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
 typing_extensions==4.7.1
 urllib3==2.0.4
 websocket-client==1.6.1
