Dockerfile: build with poetry

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,14 +1,11 @@
 # official Python image
-FROM python:3.11-alpine
-
-RUN apk add --no-cache git 
+FROM python:3.12-alpine
 
 WORKDIR /mediator
 
-COPY requirements.txt .
-
-RUN pip install --no-cache-dir -r requirements.txt
-
+COPY pyproject.toml poetry.lock .
+RUN pip install poetry && poetry install --only main --no-root
 COPY emlite_mediator emlite_mediator
+RUN poetry install --only main
 
 ENTRYPOINT ["python", "-m"]
