--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ grpcio = "^1.63.0"
 tenacity = "^8.2.3"
 supabase = "^2.4.3"
 crcmod = "^1.7"
-emop-frame-protocol = {version = "^0.1.2", source = "testpypi"}
+emop-frame-protocol = {version = "0.1.3", source = "testpypi"}
 structlog = "^24.1.0"
 fire = "^0.6.0"
 
