--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/cache@v4
         name: Define a cache for the virtual environment based on the dependencies lock file
         with:
-          path: ./python/.venv
+          path: ./.venv
           key: venv-${{ hashFiles('poetry.lock') }}
 
       - name: Install dependencies
