github action: add README.md as poetry install needs it

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,8 +3,9 @@ FROM python:3.12-alpine
 
 WORKDIR /mediator
 
-COPY pyproject.toml poetry.lock .
+COPY pyproject.toml poetry.lock README.md .
 RUN pip install poetry && poetry install --only main --no-root
+
 COPY emlite_mediator emlite_mediator
 RUN poetry install --only main
 
