--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "emlite-mediator"
-version = "0.8.0"
+version = "0.8.2"
 description = "Mediator providing access to the Emlite meters"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
@@ -16,6 +16,7 @@ crcmod = "^1.7"
 emop-frame-protocol = {version = "0.1.3", source = "testpypi"}
 structlog = "^24.1.0"
 fire = "^0.6.0"
+docker = "^7.0.0"
 
 [tool.poetry.scripts]
 test = "emlite_mediator:run_tests"
