--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "emlite-mediator"
-version = "0.8.3"
-description = "Mediator providing access to the Emlite meters"
+version = "0.9.0"
+description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
 packages = [{include = "emlite_mediator"}]
-exclude = ["tests"]
+exclude = ["tests", "*.env"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -27,7 +27,6 @@ emop = "emlite_mediator.cli.main:main"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
 grpcio-tools = "^1.63.0"
-
 
 [[tool.poetry.source]]
 name = "testpypi"
