--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "emlite-mediator"
+name = "simt-emlite-mediator"
 version = "0.9.0"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
-packages = [{include = "emlite_mediator"}]
+packages = [{include = "simt_emlite"}]
 exclude = ["tests", "*.env"]
 
 [tool.poetry.dependencies]
@@ -20,9 +20,9 @@ docker = "^7.0.0"
 protobuf = "^5.26.1"
 
 [tool.poetry.scripts]
-test = "emlite_mediator:run_tests"
-lint = "emlite_mediator:run_linter"
-emop = "emlite_mediator.cli.main:main"
+test = "simt_emlite:run_tests"
+lint = "simt_emlite:run_linter"
+emop = "simt_emlite.cli.main:main"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
@@ -36,3 +36,7 @@ priority = "explicit"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+extend-exclude = ["generated"]
+
