--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,16 @@
 [tool.poetry]
-name = "simt-emlite-mediator"
-version = "0.9.0"
+name = "simt-emlite"
+version = "0.9.1"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
 packages = [{include = "simt_emlite"}]
 exclude = ["tests", "*.env"]
+
+[tool.poetry.scripts]
+test = "simt_emlite:run_tests"
+lint = "simt_emlite:run_linter"
+emop = "simt_emlite.cli.main:main"
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -18,11 +23,7 @@ structlog = "^24.1.0"
 fire = "^0.6.0"
 docker = "^7.0.0"
 protobuf = "^5.26.1"
-
-[tool.poetry.scripts]
-test = "simt_emlite:run_tests"
-lint = "simt_emlite:run_linter"
-emop = "simt_emlite.cli.main:main"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
@@ -39,4 +40,3 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 extend-exclude = ["generated"]
-
