support optionally connecting to the meters through a SOCKS proxy

--- a/mediator.env.example
+++ b/mediator.env.example
@@ -16,3 +16,11 @@ EMLITE_TIMEOUT_SECONDS=20
 
 # Max number of jobs (syncers) to run in parallel.
 MAX_PARALLEL_JOBS=15
+
+# Configure a SOCKS proxy for tunnelling connections to the meters.
+# see the emnify-gateway project for details of this proxy:
+#   https://github.com/cepro/emnify-gateway  
+SOCKS_HOST=0.0.0.0
+SOCKS_PORT=1080
+SOCKS_USERNAME=ceprosocks
+SOCKS_PASSWORD=passpass2
