--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,10 +5,6 @@ on:
     tags:
       - "*"
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: cepro/emlite-mediator
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -24,7 +20,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
