reorganise env variables - use ~/.simt/emlite.env instead of a mediator.env

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,5 +43,5 @@ jobs:
           file: docker/Dockerfile
           push: true
           tags: |
-            ghcr.io/cepro/emlite-mediator:${{ steps.extract_tag.outputs.tag }}
-            registry.fly.io/emlite-mediator:${{ steps.extract_tag.outputs.tag }}
+            ghcr.io/cepro/simt-emlite:${{ steps.extract_tag.outputs.tag }}
+            registry.fly.io/simt-emlite:${{ steps.extract_tag.outputs.tag }}
