update README.md rename image to simt-emlite

--- a/emlite.env.example
+++ b/emlite.env.example
@@ -27,9 +27,9 @@ SITE=wlce
 # SITE=hmce
 
 # Mediator docker image to use
-SIMT_EMLITE_IMAGE=emlite-mediator
-# SIMT_EMLITE_IMAGE=ghcr.io/cepro/emlite-mediator:0.1.12
-# SIMT_EMLITE_IMAGE=registry.fly.io/emlite-mediator:0.1.12
+SIMT_EMLITE_IMAGE=simt-emlite
+# SIMT_EMLITE_IMAGE=ghcr.io/cepro/simt-emlite:0.9.3
+# SIMT_EMLITE_IMAGE=registry.fly.io/simt-emlite:0.9.3
 
 # View and manage fly deployment of mediators
 FLY_API_TOKEN=<fly auth token>
