--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "simt-emlite"
-version = "0.9.4"
+version = "0.10.0"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
@@ -26,6 +26,7 @@ fire = "^0.6.0"
 docker = "^7.1.0"
 protobuf = "^5.26.1"
 python-dotenv = "^1.0.1"
+python-socks = "^2.4.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
