update mediator clients: - pass down override proxy host and certificate - wire up lookup by serial and a placeholder for lookup by emnify id - pass through mediator hostname as a header variable to the access proxy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "editor.codeActionsOnSave": {
             "source.organizeImports": "always",
         }
-    }
+    },
+    "python.REPL.enableREPLSmartSend": false
 }
