--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,18 @@ version = "0.10.0"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
-packages = [{include = "simt_emlite"}]
-exclude = ["tests", "*.env"]
+packages = [{ include = "simt_emlite" }]
+exclude = [
+    "tests",
+    "*.env",
+
+    # the following are not added anyway as they are not under the package
+    # folder but mentioning that behavior here so it's understood:
+
+    # "infra/local-stack",
+    # "infra/systemd",
+    # "infra/monitoring",
+]
 
 [tool.poetry.scripts]
 test = "simt_emlite:run_tests"
@@ -19,8 +29,8 @@ grpcio = "^1.63.0"
 tenacity = "^8.2.3"
 supabase = "^2.4.3"
 crcmod = "^1.7"
-emop-frame-protocol = {version = "0.1.4", source = "testpypi"}
-simt-fly-machines = {version = "0.1.2", source = "testpypi"}
+emop-frame-protocol = { version = "0.1.4", source = "testpypi" }
+simt-fly-machines = { version = "0.1.3", source = "testpypi" }
 structlog = "^24.1.0"
 fire = "^0.6.0"
 docker = "^7.1.0"
