fixes testing end to end: - local stack add docker dns to nginx resolver - add socks env vars to fly mediators - build correct dns name for mediators when routing through mediator proxy on fly

--- a/infra/local-stack/docker-compose.yml
+++ b/infra/local-stack/docker-compose.yml
@@ -16,18 +16,22 @@ services:
   mediator-gateway:
     image: simt-mediator-gateway
     environment:
-      # binhex formatted supabase jwt secret (super-secret-jwt-token-with-at-least-32-characters-long) 
+      # binhex formatted supabase jwt secret (super-secret-jwt-token-with-at-least-32-characters-long)
       - SUPABASE_JWT_SECRET=73757065722d7365637265742d6a77742d746f6b656e2d776974682d61742d6c656173742d33322d636861726163746572732d6c6f6e67
+      # docker DNS for custom network
+      - NGINX_DNS_RESOLVER=127.0.0.11
     volumes:
       - ./certificates:/ssl
     ports:
       - 1443:1443
 
-  # TODO: consider starting these with the mediators cli once stack testing is stable ...  
-  mediator-cpro.lab-qa1.c:
+  # TODO: consider starting these with the mediators cli once stack testing is stable ...
+  mediator-EML2137580826:
     image: simt-emlite
     depends_on:
-      - emnify-gateway  
+      - emnify-gateway
+    expose:
+      - 50051
     env_file:
       - socks_proxy.env
     environment:
@@ -37,10 +41,12 @@ services:
       - "meter_id=02bf733d-15ca-4d82-8943-68424024cd96"
       - "emlite_host=100.79.244.203"
 
-  mediator-cpro.plot-11.c:
+  mediator-EML2244826972:
     image: simt-emlite
     depends_on:
-      - emnify-gateway  
+      - emnify-gateway
+    expose:
+      - 50051
     env_file:
       - socks_proxy.env
     environment:
