--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install dependencies
         run: poetry install
 
+      - name: Install dot env file
+        run: mkdir ~/.simt && cp emlite.env.example ~/.simt/emlite.env
+
       - name: Lint
         run: poetry run lint
 
