use flycast address to auto start / stop remove use of a mediator proxy to handle some of this

--- a/emlite.env.example
+++ b/emlite.env.example
@@ -28,6 +28,9 @@ ENV=local
 
 MEDIATOR_PROXY_HOST=localhost
 
+# Mediators self stop after this many seconds of inactivity. Don't stop if set to zero.
+MEDIATOR_INACTIVITY_SECONDS=0
+
 # Site filter
 SITE=wlce
 # SITE=hmce
