--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ protobuf = "^5.26.1"
 python-dotenv = "^1.0.1"
 python-socks = "^2.4.4"
 rich = "^13.7.1"
+dnspython = "^2.6.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
