move load_config into the adapter create which is the only place it's used this will work in a cli env and won't cause server based invocations to fail due to no config file setup
update Dockerfile to clean out package caches and temporary files - as we are paying for stopped machine storage

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,4 +9,9 @@ RUN pip install poetry && poetry install --only main --no-root
 COPY simt_emlite simt_emlite
 RUN poetry install --only main
 
+# Remove packages caches and unnessary files
+RUN pip cache purge
+RUN poetry cache clear --all .
+RUN rm -rf /root/.cache /tmp/*
+
 ENTRYPOINT ["poetry", "run", "python", "-m"]
