--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "simt-emlite"
-version = "0.10.8"
+version = "0.10.9"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
@@ -39,6 +39,7 @@ python-dotenv = "^1.0.1"
 python-socks = "^2.4.4"
 rich = "^13.7.1"
 dnspython = "^2.6.1"
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
