--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "simt-emlite"
-version = "0.12.1"
+version = "0.12.2"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
 readme = "README.md"
@@ -24,24 +24,24 @@ emop = "simt_emlite.cli.emop:main"
 mediators = "simt_emlite.cli.mediators:main"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.12.3"
 grpcio = "1.64.1"
-tenacity = "^8.2.3"
-supabase = "^2.4.3"
-crcmod = "^1.7"
+tenacity = "8.5.0"
+supabase = "2.5.3"
+crcmod = "1.7"
 emop-frame-protocol = { version = "0.1.4", source = "testpypi" }
 simt-fly-machines = { version = "0.1.8", source = "testpypi" }
-structlog = "^24.1.0"
-docker = "^7.1.0"
-protobuf = "^5.26.1"
-python-dotenv = "^1.0.1"
-python-socks = "^2.4.4"
-rich = "^13.7.1"
-dnspython = "^2.6.1"
-httpx = "^0.27.0"
+structlog = "24.4.0"
+docker = "7.1.0"
+protobuf = "5.27.2"
+python-dotenv = "1.0.1"
+python-socks = "2.5.0"
+rich = "13.7.1"
+dnspython = "2.6.1"
+httpx = "0.27.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.4.2"
+ruff = "0.4.10"
 grpcio-tools = "1.64.1"
 
 [[tool.poetry.source]]
