--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "simt-emlite"
-version = "0.12.3"
+version = "0.12.4"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = ["Chris Hatch <chris@cepro.energy>"]
-readme = "README.md"
+readme = "README.pypi.md"
 packages = [{ include = "simt_emlite" }]
 exclude = [
     "tests",
