--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ emop = "simt_emlite.cli.emop:main"
 mediators = "simt_emlite.cli.mediators:main"
 
 [tool.poetry.dependencies]
-python = "3.12.3"
+python = ">=3.12,<4.0"
 grpcio = "1.64.1"
 tenacity = "8.5.0"
 supabase = "2.5.3"
