cleaning up exceptions tune connect fail retries

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,4 @@
-# official Python image
-FROM python:3.12.3-alpine
+FROM python:3.12.4-alpine
 
 WORKDIR /mediator
 
@@ -9,7 +8,7 @@ RUN pip install poetry && poetry install --only main --no-root
 COPY simt_emlite simt_emlite
 RUN poetry install --only main
 
-# Remove packages caches and unnessary files
+# Remove packages caches and unnessary files (fails ... needs investigtion)
 # RUN pip cache purge
 # RUN poetry cache clear --all .
 # RUN rm -rf /root/.cache /tmp/*
