--- a/infra/local-stack/docker-compose.yml
+++ b/infra/local-stack/docker-compose.yml
@@ -33,22 +33,22 @@ services:
   #     - 1443:1443
 
   # TODO: consider starting these with the mediators cli once stack testing is stable ...
-  mediator-EML2137580751:
+  mediator-EML2137580797:
     image: simt-emlite
-    # depends_on:
-      # - emnify-gateway
+    depends_on:
+      - emnify-gateway
     expose:
       - 50051
     env_file:
       - socks_proxy.env
     environment:
-      - EMLITE_HOST=100.79.244.216
+      - EMLITE_HOST=100.79.244.150
     command: simt_emlite.mediator.grpc.server
     labels:
       - "meter_id=02bf733d-15ca-4d82-8943-68424024cd96"
-      - "emlite_host=100.79.244.216"
+      - "emlite_host=100.79.244.150"
 
-  mediator-EML2244826972:
+  mediator-EML2137580798:
     image: simt-emlite
     # depends_on:
       # - emnify-gateway
@@ -57,26 +57,26 @@ services:
     env_file:
       - socks_proxy.env
     environment:
-      - EMLITE_HOST=100.79.244.215
+      - EMLITE_HOST=100.79.244.156
     command: simt_emlite.mediator.grpc.server
     labels:
       - "meter_id=91bb8372-4ca4-4465-a9da-2a995493e09b"
-      - "emlite_host=100.79.244.215"
+      - "emlite_host=100.79.244.156"
 
-  mediator-EMP1AX2137000248:
-    image: simt-emlite
-    # depends_on:
-      # - emnify-gateway
-    expose:
-      - 50051
-    env_file:
-      - socks_proxy.env
-    environment:
-      - EMLITE_HOST=100.79.244.147
-    command: simt_emlite.mediator.grpc.server
-    labels:
-      - "meter_id=6acd0d97-acca-45a5-869b-6e843c1cc9a9"
-      - "emlite_host=100.79.244.147"
+  # mediator-EMP1AX2137000248:
+  #   image: simt-emlite
+  #   depends_on:
+  #     - emnify-gateway
+  #   expose:
+  #     - 50051
+  #   env_file:
+  #     - socks_proxy.env
+  #   environment:
+  #     - EMLITE_HOST=100.79.244.147
+  #   command: simt_emlite.mediator.grpc.server
+  #   labels:
+  #     - "meter_id=6acd0d97-acca-45a5-869b-6e843c1cc9a9"
+  #     - "emlite_host=100.79.244.147"
 
 networks:
   default:
