--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -12,7 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.12.3"]
-        os: [ubuntu-latest, macos-latest]
+        # macos-latest disabled - hanging on the 'install dependencies' step for unknown reasons
+        os: [ubuntu-latest] 
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
