build failing due to unecessary poetry install step - previously looks like it was failing but didn't break the build - something has changed to cause the build to terminate but i don't know what
so removed the install step from Dockerfile
also bumped to latest python 3.12 and fixed the version of ubuntu for test instead of latest

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -11,9 +11,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.12.3"]
+        python-version: ["3.12.8"]
         # macos-latest disabled - hanging on the 'install dependencies' step for unknown reasons
-        os: [ubuntu-latest] 
+        os: [ubuntu-24.04]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
