--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simt-emlite"
-version = "0.21.4"
+version = "0.22.0"
 description = "API and CLI for communicating with the Emlite meters via EMOP"
 authors = [{ name = "Chris Hatch", email = "chris@cepro.energy" }]
 requires-python = ">=3.12,<4.0"
@@ -19,8 +19,9 @@ dependencies = [
     "dnspython==2.6.1",
     "httpx==0.27.0",
     "argcomplete>=3.4.0",
+    "types-requests==2.32.4.20250611",
     # testpypi deps - see additional metadata under 'tool.poetry.dependencies' 
-    "emop-frame-protocol==0.4.1",
+    "emop-frame-protocol==0.4.2",
     "simt-fly-machines==0.1.12",
 ]
 
@@ -34,7 +35,7 @@ mediators = "simt_emlite.cli.mediators:main"
 [tool.poetry]
 # Keeping Poetry-specific configurations
 packages = [{ include = "simt_emlite" }]
-exclude = ["tests", "*.env"]
+exclude = ["tests", "*.env", "simt_emlite/**/*.py"]
 # Dependencies that require alternative sources
 
 [[tool.poetry.source]]
@@ -48,6 +49,7 @@ simt-fly-machines = { source = "testpypi" }
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.11.2"
+mypy = "1.16.1"
 cython = "3.1.2"
 build = "1.2.2.post1"
 cibuildwheel = "3.0.0"
