--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "httpx==0.27.0",
     "argcomplete>=3.4.0",
     # testpypi deps - see additional metadata under 'tool.poetry.dependencies' 
-    "emop-frame-protocol==0.3.9",
+    "emop-frame-protocol==0.3.9.post1",
     "simt-fly-machines==0.1.11",
 ]
 
