--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -46,5 +46,8 @@ jobs:
       - name: Lint
         run: poetry run lint
 
+      - name: Static types check
+        run: poetry run mypy emop_frame_protocol
+
       - name: Test
         run: poetry run test
