--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -41,8 +41,8 @@ jobs:
           path: dist
           merge-multiple: true
 
-      - name: Publish to Test PyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          repository-url: https://test.pypi.org/legacy/
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository-url: https://upload.pypi.org/legacy/
+          password: ${{ secrets.PYPI_API_TOKEN }}
