support filter by esco code on the new mediator server

--- a/emlite.local.env
+++ b/emlite.local.env
@@ -23,6 +23,9 @@
 
 ENV=local
 
+# mediator server filter - see meter_registry.py
+ESCO=lab
+
 # EMOP CLI / Mediator variables
 
 # Mediators self stop after this many seconds of inactivity. Don't stop if set to zero.
